dart_sys/src/lib.rs


extern "C" {
    #[doc = " Produces an api error handle with the provided error message."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    #[doc = ""]
    #[doc = " \\param error the error message."]
    pub fn Dart_NewApiError(error: *const ::std::os::raw::c_char) -> Dart_Handle;
}

extern "C" {
    pub fn Dart_NewCompilationError(error: *const ::std::os::raw::c_char) -> Dart_Handle;
}

extern "C" {
    #[doc = " Produces a new unhandled exception error handle."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    #[doc = ""]
    #[doc = " \\param exception An instance of a Dart object to be thrown or"]
    #[doc = "        an ApiError or CompilationError handle."]
    #[doc = "        When an ApiError or CompilationError handle is passed in"]
    #[doc = "        a string object of the error message is created and it becomes"]
    #[doc = "        the Dart object to be thrown."]
    pub fn Dart_NewUnhandledExceptionError(exception: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Propagates an error."]
    #[doc = ""]
    #[doc = " If the provided handle is an unhandled exception error, this"]
    #[doc = " function will cause the unhandled exception to be rethrown.  This"]
    #[doc = " will proceed in the standard way, walking up Dart frames until an"]
    #[doc = " appropriate 'catch' block is found, executing 'finally' blocks,"]
    #[doc = " etc."]
    #[doc = ""]
    #[doc = " If the error is not an unhandled exception error, we will unwind"]
    #[doc = " the stack to the next C frame.  Intervening Dart frames will be"]
    #[doc = " discarded; specifically, 'finally' blocks will not execute.  This"]
    #[doc = " is the standard way that compilation errors (and the like) are"]
    #[doc = " handled by the Dart runtime."]
    #[doc = ""]
    #[doc = " In either case, when an error is propagated any current scopes"]
    #[doc = " created by Dart_EnterScope will be exited."]
    #[doc = ""]
    #[doc = " See the additional discussion under \"Propagating Errors\" at the"]
    #[doc = " beginning of this file."]
    #[doc = ""]
    #[doc = " \\param An error handle (See Dart_IsError)"]
    #[doc = ""]
    #[doc = " \\return On success, this function does not return.  On failure, the"]
    #[doc = " process is terminated."]
    pub fn Dart_PropagateError(handle: Dart_Handle);
}

extern "C" {
    #[doc = " Converts an object to a string."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\return The converted string if no error occurs during"]
    #[doc = "   the conversion. If an error does occur, an error handle is"]
    #[doc = "   returned."]
    pub fn Dart_ToString(object: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Checks to see if two handles refer to identically equal objects."]
    #[doc = ""]
    #[doc = " If both handles refer to instances, this is equivalent to using the top-level"]
    #[doc = " function identical() from dart:core. Otherwise, returns whether the two"]
    #[doc = " argument handles refer to the same object."]
    #[doc = ""]
    #[doc = " \\param obj1 An object to be compared."]
    #[doc = " \\param obj2 An object to be compared."]
    #[doc = ""]
    #[doc = " \\return True if the objects are identically equal.  False otherwise."]
    pub fn Dart_IdentityEquals(obj1: Dart_Handle, obj2: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Allocates a handle in the current scope from a persistent handle."]
    pub fn Dart_HandleFromPersistent(object: Dart_PersistentHandle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Allocates a handle in the current scope from a weak persistent handle."]
    pub fn Dart_HandleFromWeakPersistent(object: Dart_WeakPersistentHandle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Allocates a persistent handle for an object."]
    #[doc = ""]
    #[doc = " This handle has the lifetime of the current isolate unless it is"]
    #[doc = " explicitly deallocated by calling Dart_DeletePersistentHandle."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_NewPersistentHandle(object: Dart_Handle) -> Dart_PersistentHandle;
}

extern "C" {
    #[doc = " Assign value of local handle to a persistent handle."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    #[doc = ""]
    #[doc = " \\param obj1 A persistent handle whose value needs to be set."]
    #[doc = " \\param obj2 An object whose value needs to be set to the persistent handle."]
    #[doc = ""]
    #[doc = " \\return Success if the persistent handle was set"]
    #[doc = "   Otherwise, returns an error."]
    pub fn Dart_SetPersistentHandle(obj1: Dart_PersistentHandle, obj2: Dart_Handle);
}

extern "C" {
    #[doc = " Deallocates a persistent handle."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_DeletePersistentHandle(object: Dart_PersistentHandle);
}

extern "C" {
    #[doc = " Allocates a weak persistent handle for an object."]
    #[doc = ""]
    #[doc = " This handle has the lifetime of the current isolate unless the object"]
    #[doc = " pointed to by the handle is garbage collected, in this case the VM"]
    #[doc = " automatically deletes the handle after invoking the callback associated"]
    #[doc = " with the handle. The handle can also be explicitly deallocated by"]
    #[doc = " calling Dart_DeleteWeakPersistentHandle."]
    #[doc = ""]
    #[doc = " If the object becomes unreachable the callback is invoked with the weak"]
    #[doc = " persistent handle and the peer as arguments. The callback is invoked on the"]
    #[doc = " thread that has entered the isolate at the time of garbage collection. This"]
    #[doc = " gives the embedder the ability to cleanup data associated with the object and"]
    #[doc = " clear out any cached references to the handle. All references to this handle"]
    #[doc = " after the callback will be invalid. It is illegal to call into the VM from"]
    #[doc = " the callback. If the handle is deleted before the object becomes unreachable,"]
    #[doc = " the callback is never invoked."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    #[doc = ""]
    #[doc = " \\param object An object."]
    #[doc = " \\param peer A pointer to a native object or NULL.  This value is"]
    #[doc = "   provided to callback when it is invoked."]
    #[doc = " \\param external_allocation_size The number of externally allocated"]
    #[doc = "   bytes for peer. Used to inform the garbage collector."]
    #[doc = " \\param callback A function pointer that will be invoked sometime"]
    #[doc = "   after the object is garbage collected, unless the handle has been deleted."]
    #[doc = "   A valid callback needs to be specified it cannot be NULL."]
    #[doc = ""]
    #[doc = " \\return The weak persistent handle or NULL. NULL is returned in case of bad"]
    #[doc = "   parameters."]
    pub fn Dart_NewWeakPersistentHandle(
        object: Dart_Handle,
        peer: *mut ::std::os::raw::c_void,
        external_allocation_size: isize,
        callback: Dart_WeakPersistentHandleFinalizer,
    ) -> Dart_WeakPersistentHandle;
}

extern "C" {
    pub fn Dart_DeleteWeakPersistentHandle(
        isolate: Dart_Isolate,
        object: Dart_WeakPersistentHandle,
    );
}

extern "C" {
    #[doc = " Gets the version string for the Dart VM."]
    #[doc = ""]
    #[doc = " The version of the Dart VM can be accessed without initializing the VM."]
    #[doc = ""]
    #[doc = " \\return The version string for the embedded Dart VM."]
    pub fn Dart_VersionString() -> *const ::std::os::raw::c_char;
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Dart_QualifiedFunctionName {
    pub library_uri: *const ::std::os::raw::c_char,
    pub class_name: *const ::std::os::raw::c_char,
    pub function_name: *const ::std::os::raw::c_char,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Dart_IsolateFlags {
    pub version: i32,
    pub enable_asserts: bool,
    pub use_field_guards: bool,
    pub use_osr: bool,
    pub obfuscate: bool,
    pub entry_points: *mut Dart_QualifiedFunctionName,
    pub load_vmservice_library: bool,
    pub unsafe_trust_strong_mode_types: bool,
    pub copy_parent_code: bool,
}

extern "C" {
    #[doc = " Initialize Dart_IsolateFlags with correct version and default values."]
    pub fn Dart_IsolateFlagsInitialize(flags: *mut Dart_IsolateFlags);
}
